--- a/custom.css
+++ b/custom.css
@@ -339,6 +339,7 @@ body {
   padding: var(--md) 0;
   margin: var(--md) 0;
   border-top: 1px solid;
+  overflow-x: auto;
 }
 
 .post-content code {
